# todo

./: README.md  build_reverse-proxy.bat
client/: Cargo.toml  index.html
client/src/: lib.rs  main.rs  routes.rs
client/src/api_real/: api_common.rs  api_task.rs  api_user.rs  mod.rs
client/src/api_test/: api_task_test.rs  api_user_test.rs  mod.rs
client/src/common/: api_error.rs  mod.rs  ui_helper.rs
client/src/components/: button.rs  checkbox.rs  main_title.rs  mod.rs  select_input.rs  text_input.rs  text_with_error.rs  textarea.rs
client/src/composite/: checkbox_with_label.rs  message_banner.rs  mod.rs  navbar.rs  select_with_label.rs  tasks_panel.rs  text_with_label.rs
client/src/model/: mod.rs  task.rs  user.rs
client/src/model/orders/: mod.rs  order.rs  service.rs
client/src/pages/: create_user_page.rs  home_page.rs  login_page.rs  logout_page.rs  mod.rs  task_edit_page.rs  task_page.rs
client/src/store/: counter_store.rs  mod.rs  order_store.rs  settings_store.rs
reverse-proxy/: .env  Cargo.toml  Dockerfile
reverse-proxy/keys/: localhost_cert.crt  localhost_key.pem
reverse-proxy/proxy/: Cargo.toml
reverse-proxy/proxy/src/: app.rs  main.rs  service.rs
reverse-proxy/resource-proxy-pingora/: Cargo.toml
reverse-proxy/resource-proxy-pingora/src/: handler.rs  lib.rs  request_filter.rs
server/: .env  .env.dev  .env.posgres.prod  .env.prod  Cargo.toml  Dockerfile  Dockerfile-posgres  Dockerfile_distroless_static_nonroot  Dockerfile_gcc  Dockerfile_old_actual  data.db  docker-compose-posgres.yml  docker-compose.yml
server/app/: Cargo.toml
server/app/src/: lib.rs  main.rs
server/app/src/database/: tasks.rs
server/app/src/routes/: mod.rs  tasks_route.rs
server/app/src/util/: app_sqlite.rs
server/data/: data.db
server/health_check/: Cargo.toml
server/health_check/src/: main.rs
