[package]
name = "todo-client"
version = "0.1.0"
edition = "2024"

[features]
default = ["real-api"]

real-api = []
test-api = []

[dependencies]
yew = { version = "0.22", features = ["csr"] }
yewdux = "0.12"
gloo ={ version = "0.12.0"}
serde = "1.0.228"
serde_json = "1.0.149"
wasm-bindgen = "0.2.114"
web-sys = { version = "0.3.91", features = ["HtmlButtonElement", "DomTokenList"] }
yew-router = "0.19.0"
wasm-bindgen-futures = "0.4.65"
gloo-net = "0.7.0"
chrono = { version = "0.4.44", features = ["serde"] }

[profile.release]
# Optimize for size
opt-level = "z"      # Optimize for size (or "s" for slightly less aggressive)
lto = true           # Link-Time Optimization
codegen-units = 1    # Single codegen unit for better optimization
panic = "abort"      # Smaller binary, no unwinding
strip = true         # Strip symbols

[profile.release.package."*"]
opt-level = "z"      # Also optimize dependencies for size
