[package]
name = "resource-proxy-pingora"
version = "0.1.2"
authors = ["Wang Wei"]
repository = "https://github.com/thegenius/resource-proxy-pingora"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["static", "static-files", "http", "pingora"]
exclude = ["testdata/"]
license = "Apache-2.0"
edition = "2021"
description = """
A Pingora module for serving static files
"""

[lib]
name = "resource_proxy_pingora"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
clap = {version = "4.6.0", features = ["derive"]}
http = "1.4.0"
httpdate = "1.0.3"
log = "0.4.29"
#glob = "0.3.1"
mime_guess = { version = "2.0.5", default-features = false }
#pandora-module-utils = "0.2.0"
percent-encoding = "2.3.2"
serde = {version = "1.0.228", features = ["derive"]}
#once_cell = "1.19.0"
pingora = { version = "0.8.0", features = ["proxy"] }
pingora-core = { version = "0.8.0" }
#serde_yaml = "0.8.26"
maud = "0.27.0"

[dev-dependencies]
#compression-module = "0.2.0"
const_format = "0.2.35"
env_logger = "0.11.10"
#rewrite-module = "0.2"
#startup-module = "0.2"
test-log = "0.2.19"
tokio = "1.50.0"

